# Django

./: .gitignore  Procfile  README.md  requirements.txt  requirements.txt.txt
website/: Procfile  pyproject.toml
website/account/: forms.py  models.py  task.py  urls.py  views.py
website/account/fixtures/: user.json
website/account/migrations/: 0001_initial.py  0002_remove_account_phone.py  0003_account_email_confirmed.py  0004_auto_20210515_1644.py  0005_auto_20210516_2027.py  0006_account_photo.py  0007_add_default_photos.py
website/account/templates/account/: base.html  (+1 more)
website/cart/: cart.py  urls.py  views.py
website/coupons/: admin.py  models.py  urls.py  views.py
website/coupons/migrations/: 0001_initial.py  0002_auto_20210605_2116.py
website/market/: admin.py  models.py  task.py  urls.py  views.py
website/market/fixtures/: categories.json
website/market/migrations/: 0001_initial.py  0002_auto_20210329_1723.py  0003_productreview.py  0004_auto_20210605_2116.py
website/order/: admin.py  form.py  models.py  urls.py  views.py
website/order/migrations/: 0001_initial.py  0002_auto_20210515_1644.py  0003_auto_20210515_1709.py
website/order/templates/: create.html  created.html
website/static/css/: base.css
website/templates/: base.html
website/templates/cart/: detail.html
website/templates/errors/: 403_page.html  404_page.html  500_page.html
website/templates/market/: base.html
website/templates/parts/: _footer.html  _header.html  _navbar.html
website/website/: __init__.py  celery.py  settings.py  urls.py  views.py  wsgi.py
(+25 files in other folders)
